##############################################################################
# Cmake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(respawn)

##############################################################################
# Find Packages
##############################################################################

find_package(catkin REQUIRED)

##############################################################################
# Catkin
##############################################################################

catkin_package()
    
##############################################################################
# Project Configuration
##############################################################################

add_definitions(${catkin_DEFINITIONS})
include_directories(include ${catkin_INCLUDE_DIRS})

##############################################################################
# Sources
##############################################################################

add_executable(${PROJECT_NAME} respawn.c)

##############################################################################
# Installs
##############################################################################

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
