<package>
  <name>respawn</name>
  <version>0.1.0</version>
  <description>
    Respawn simple programs for embedded boards. 
  </description>
  <url type="repository">https://github.com/stonier/respawn</url>
  <url type="bugtracker">https://github.com/stonier/respawn/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent/>
  </export>

</package>
